--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   ],
   "require": {
     "php": ">=5.6",
-    "fusio/engine": "^0.6@dev"
+    "fusio/engine": "^0.6@dev",
+    "guzzlehttp/guzzle": "^6.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.6"
