--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
-    "fusio/engine": "^5.0",
+    "php": ">=8.1",
+    "fusio/engine": "^6.0",
     "guzzlehttp/guzzle": "^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0"
+    "phpunit/phpunit": "^9.0",
+    "vimeo/psalm": "^5.9"
   },
   "autoload": {
     "psr-4": {
