--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   "require": {
     "php": ">=8.1",
     "fusio/engine": "^6.0",
-    "guzzlehttp/guzzle": "^7.0"
+    "guzzlehttp/guzzle": "^7.0",
+    "kevinrob/guzzle-cache-middleware": "^5.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
