--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "php": ">=8.1",
     "fusio/engine": "^6.0",
     "guzzlehttp/guzzle": "^7.0",
-    "kevinrob/guzzle-cache-middleware": "^5.1"
+    "kevinrob/guzzle-cache-middleware": "^5.1",
+    "twig/twig": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
