--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   ],
   "require": {
     "php": ">=8.1",
+    "psx/data": "^7.0",
     "fusio/engine": "^6.0",
     "guzzlehttp/guzzle": "^7.0",
     "kevinrob/guzzle-cache-middleware": "^6.0",
